# space_station_os

./: .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  Vagrantfile  _config.yml  behaviourTree.md  entry-point.sh  index.html  open_mct-bridge.sh  package-lock.json
space_station_bt/: CMakeLists.txt  package.xml
space_station_bt/include/space_station_bt/: behavior_tree_engine.hpp
space_station_bt/src/: behavior_tree_engine.cpp
space_station_bt_navigator/: CMakeLists.txt  README.md  failsafe_tree.xml  package.xml
space_station_bt_navigator/behavior_trees/: cmg_unloading_tree.xml  control_mode_test_tree.xml
space_station_bt_navigator/include/space_station_bt_navigator/: bt_navigator.hpp
space_station_bt_navigator/launch/: bt_navigator.launch.py  cmg_unloading_test.launch.py  control_mode_test.launch.py
space_station_bt_navigator/scripts/: test_cmg_unloading_complete.sh  test_control_mode.sh
space_station_bt_navigator/src/: bt_navigator.cpp  bt_navigator_node.cpp  demo_executor.cpp
space_station_bt_nodes/: CMakeLists.txt  package.xml
space_station_bt_nodes/src/: example_action.cpp  example_condition.cpp  example_control.cpp  example_decorator.cpp  failsafe_condition.cpp  unload_cmg_action.cpp
space_station_core/: CMakeLists.txt  package.xml
space_station_core/include/space_station_core/: plugin_base.hpp
space_station_core/src/: plugin_base.cpp
space_station_eclss/: CMakeLists.txt  README.md  package.xml
space_station_eclss/action/: AirRevitalisation.action  OxygenGeneration.action
space_station_eclss/behaviortrees/: ars_bt.xml  eclss_bt.xml  ogs_bt.xml  wrs_bt.xml
space_station_eclss/config/: ARS.yaml  CrewQuarter.yaml  OGS.yaml  WRS.yaml  ars_sys.yaml  sabatier_sys.yaml
space_station_eclss/dashboard/: app.js  index.html  style.css
space_station_eclss/dashboard/dashboard-ui/: README.md  package-lock.json  package.json
space_station_eclss/data/: adsorbent_air_quality.csv  collector_air_quality.csv  desiccant_air_quality.csv
space_station_eclss/include/space_station_eclss/: ars_systems.hpp  crew_quarter.hpp  electrolysis.h  ogs_system.hpp  sabatier.h  stl_monitor.hpp  (+6 more)
space_station_eclss/launch/: ars_systems_v4.launch.py  ars_systems_v5.launch.py  eclss.launch.py  ogs_systems_v2.launch.py  ogs_systems_v3.launch.py  wrs_systems_v2.launch.py  wrs_systems_v3.launch.py
space_station_eclss/msg/: AstronautHealth.msg
space_station_eclss/scripts/: iss_simulator.py  rosbag_csv.py  wrs_cancel_demo.py
space_station_eclss/src/: README.md  Subsystem.py  astro_mode.py  crew_quarters.cpp  crew_simulation.py  developer_mode.py  diagnostic_signal.py  stl_monitor.cpp  user_mode.py
space_station_eclss/test/: test_ars_action_server.cpp  test_ogs_action_server.cpp
space_station_eps/: CMakeLists.txt  README.md  package.xml
space_station_eps/behavior_trees/: battery_health.xml
space_station_eps/config/: battery_config.yaml  battery_id.yaml  bcdu_config.yaml  ddcu_config.yaml  eps_controller.yaml  primary_eps_config.yaml
space_station_eps/src/: battery_health.cpp  bcdu_device.cpp  ddcu_device.cpp  mbsu_distributor.cpp  sarj_mock.cpp
space_station_gazebo/space_station_control/: CMakeLists.txt  package.xml
space_station_gnc/: .flake8  CMakeLists.txt  README.md  package.xml  setup.py
space_station_gnc/action/: Unloading.action
space_station_gnc/config/: config.json  eagle_thruster_properties.yaml  eagle_thruster_table.yaml  orbit_dynamics.yaml  params.yaml  ros_config.yaml
space_station_gnc/dashboard-ui/: .env.development  package-lock.json  package.json
space_station_gnc/launch/: gnc_core.launch.py  gnc_rviz.launch.py  gnc_rviz_thruster.launch.py  gnc_thruster_cmg_switch.launch.py  launch_gnc.py  orbit_dynamics.launch.py
space_station_gnc/rviz/: ssos.rviz
space_station_gnc/scripts/: draw_3d_position.py  jacob_cmgs_casadi.py  test_control_mode.sh
space_station_gnc/src/: L_p_func.cpp  attitude_dynamics.cpp  control_torque.cpp  control_torque_act.cpp  control_torque_orig.cpp  demo1a_nauka_incident_estimate.cpp  demo1b_crisis_mainengine.cpp  demo1c_small_incident.cpp  demo1d_sitl.cpp  orbit_dynamics.cpp  orbit_dynamics_mock.cpp  physics_motion.cpp  physics_sensor.cpp  sense_estimate.cpp  space_station_gnc.cpp  thruster_matrix.cpp  torque_collector.cpp  torque_controller.cpp
space_station_gnc/srv/: SetGncModeActuation.srv
space_station_gnc/tests/: L_p_func.cpp  pseudoinv_executable  test_jacob.cpp  test_quat.cpp
space_station_gnc/urdf/: ISS_stationaryFromNasa.urdf  SD_SpaceStation_Ver05.urdf  space_station_eagle.xacro
space_station_interfaces/: CMakeLists.txt  package.xml
space_station_lifecycle_manager/: CMakeLists.txt  package.xml
space_station_lifecycle_manager/src/: lifecycle_manager.cpp
space_station_thermal_control/: CMakeLists.txt  README.md  package.xml
space_station_thermal_control/action/: Coolant.action
space_station_thermal_control/analysis/: plot_node_temp.py
space_station_thermal_control/behaviortrees/: thermals_bt.xml
space_station_thermal_control/config/: solar_array.yaml  thermal_nodes.yaml  thermals.yaml
space_station_thermal_control/launch/: solar_absorpitivity.launch.py  thermals.launch.py
space_station_thermal_control/msg/: ExternalLoopStatus.msg  InternalLoopStatus.msg  ThermalLinkFlows.msg  ThermalLinkFlowsArray.msg
space_station_thermal_control/plugin/: CMakeLists.txt  thermal_plugin.cc  thermal_plugin.hh
space_station_thermal_control/scripts/: thermal_visualization.py
space_station_thermal_control/src/: coolant.cpp  cooling.cpp  external_loop.cpp  on_demand_publisher.cpp  radiators.cpp  solar_heat_node.cpp  sun_vector.cpp  thermals_solver.cpp
space_station_thermal_control/srv/: CoolantFlow.srv  InternalLoop.srv  NodeHeatFlow.srv  VentHeat.srv
space_station_utils/: CMakeLists.txt  package.xml
space_station_utils/src/: utils.cpp
ssos_core/: CMakeLists.txt  package.xml
ssos_core/config/: system_manager_param.yaml
ssos_core/launch/: system_manager.launch.py
ssos_core/src/: system_manager.cpp  system_manager_main.cpp
ssos_core/test/: test_system_manager.cpp
(+306 files in other folders)
