<?xml version="1.0"?>
<package format="3">
  <name>space_station_bt_navigator</name>
  <version>0.0.1</version>
  <description>Behavior tree navigator for space station.</description>
  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>space_station_bt</depend>
  <depend>space_station_bt_nodes</depend>
  <depend>space_station_utils</depend>
  <depend>space_station_lifecycle_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
