<?xml version="1.0"?>
<package format="3">
  <name>space_station_core</name>
  <version>0.0.1</version>
  <description>Abstract plugin interfaces for Space Station OS.</description>
  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
